--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -15,7 +15,7 @@ body {
 
     font-family: $typography;
     font-weight: 300;
-    line-height: 1.3;
+    line-height: 1.5;
 
     max-width: 780px;
     margin: 80px auto;
@@ -40,4 +40,19 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.post {
+    h3 {
+        margin-top: 80px;
+    }
+
+    p {
+        max-width: 540px;
+        margin-bottom: 40px;
+    }
+
+    img {
+        max-width: 780px;
+    }
 }
